# hypersonic

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HYPERBOLIC_TRANSFORMERS.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  main.py  models.py  pyproject.toml  requirements.txt  requirements_py313.txt
.github/workflows/: ci.yml
backbone/: hyperbolic_transformer.py
examples/: basic_usage.py
scripts/eval/: eval_hyperbolic_transformer.sh
scripts/train/: train_kinetics_hyperbolic_transformer.sh
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.py  test_augmentation.py  test_backbone.py  test_datasets.py  test_hyperbolic_transformer.py  test_losses.py  test_models.py  test_poincare_distance.py  test_trainer.py  test_utils.py
